objects/ssot__InventoryProductDisbursement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursedQuantity__c</fullName>
        <label>Disbursed Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementDateTime__c</fullName>
        <label>Disbursement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DisbursementTargetAccountId__c</fullName>
        <label>Disbursement Target Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Inventory Product Disbursement Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InventoryOperationId__c</fullName>
        <label>Inventory Operation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsDisbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disbursed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsProductSerialized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LocationProductInventoryId__c</fullName>
        <label>Location Product Inventory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductionBatchId__c</fullName>
        <label>Production Batch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasureId__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequestedQuantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationMessageText__c</fullName>
        <label>Violation Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ViolationType__c</fullName>
        <label>Violation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarningMessageText__c</fullName>
        <label>Warning Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WarningType__c</fullName>
        <label>Warning Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745562759301_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryProductDisbursement_Opportu_rel</label>
        <referenceTo>ssot__Opportunity__dlm</referenceTo>
        <relationshipLabel>InventoryProductDisbursement_Opportu_rel</relationshipLabel>
        <relationshipName>rel_1745562759301_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745562761054_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryProductDisbursement_VisitId_rel</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>InventoryProductDisbursement_VisitId_rel</relationshipLabel>
        <relationshipName>rel_1745562761054_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745562764706_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InventoryProductDisbursement_Disburs_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>InventoryProductDisbursement_Disburs_rel</relationshipLabel>
        <relationshipName>rel_1745562764706_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>